typescript/checker/tests/conformance/decorators/invalid/decoratorOnTypeAlias.ts.stderr
error: Unexpected token Some(At)
 --> $DIR/tests/conformance/decorators/invalid/decoratorOnTypeAlias.ts:3:1
  |
3 | @dec
  | ^

